<resources>

    <string name="facebook_app_id" translatable="false">1559615220727365</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1559615220727365</string>


    <string name="app_name">HelloFriend</string>
    <string name="title_activity_your__suggestions" translatable="false">Your_Suggestions</string>
    <string name="action_settings">Settings</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="title_activity_main">HelloFriend</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="title_activity_new__and__hot" translatable="false">New_And_Hot</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="likes" translatable="false">LIKES</string>
    <string name="uploadingPicNr">Uploading Picture Nr.:</string>
    <string name="creating_ur_acc">Creating your account</string>
    <string name="copied_scname">Copied Name to Clipboard</string>
    <string name="you_like_it">You like it!</string>
    <string name="youcannowaddpeople">You can now add people!</string>
    <string name="welcomeback">Welcome Back,</string>
    <string name="heystranger">Hey stranger!</string>
    <string name="thispersonwouldliketoknowyou">This person would like to know who you are!</string>
    <string name="toaddthispersonpleasesignup">To add this person, please join us!</string>
    <string name="signup">Sign up</string>
    <string name="no">No</string>
    <string name="see_likes">See likes</string>
    <string name="youmustbeatleast13yo">You must be at least 13 years old</string>
    <string name="updatingyouraccount">Updating your account</string>
    <string name="yourprofileisuptodate">Your Profile is up to date!</string>
    <string name="deleteimages">Delete Images</string>
    <string name="deleteandupdate">Delete and Update</string>
    <string name="pictureswillbedeleted">Picture(s) will be deleted</string>
    <string name="yoursearchpreferences">Your search preferences:</string>
    <string name="saveandapply">Apply</string>
    <string name="clear">clear</string>
    <string name="country">Country</string>
    <string name="yes">yes</string>
    <string name="logoutwasasuccess">Logout was a success</string>
    <string name="cangingyourfiletrmessage">Changing your filter may help to see something!</string>
    <string name="nothingtoseehere">Nothing to see here!</string>
    <string name="reportthisperson">Report this person?</string>
    <string name="userreported">User reported</string>
    <string name="goodbye">Goodbye! Sad to see you go.</string>
    <string name="isthisyourfinalchoice">Is this your final choice? :/</string>
    <string name="byclickingyouaccept">With the creation of your account you accept<u> our terms of service</u></string>
    <string name="accept">Accept!</string>
    <string name="addsomeone">How to add someone:</string>
    <string name="click">Click!</string>
    <string name="perfect">Purrrfect!</string>
    <string name="havefun">Have fun!</string>
    <string name="swipeorcheckoutthemenu">Swipe or check out the menu in the top left corner</string>
    <string name="letsgo">Let\'s go!</string>
    <string name="swipetocontinue">Swipe to continue!</string>
    <string name="welcome">WELCOME!</string>
    <string name="yourprofile">Your Profile</string>
    <string name="more">More</string>
    <string name="newandhot"><![CDATA[New & Hot]]></string>
    <string name="yoursuggestions">Your Suggestions</string>
    <string name="edityourprofile">Edit Your Profile</string>
    <string name="upload_your_profile_photo">Upload Your Profile Photo</string>
    <string name="verify_with_your_google_profile">Verify your Profile</string>
    <string name="join_the_family">Join The Family</string>
    <string name="snapchat_name">SnapChat name</string>
    <string name="birth_year">Birth year</string>
    <string name="update_account">Update Account</string>
    <string name="ohnonointernet">oh oh! No Internet</string>
    <string name="check_your_connection_before_continuing">Check your connection!</string>
    <string name="create_account">Create Account</string>
    <string name="showme">show me!</string>
    <string name="missingdiamonds">Missing diamonds</string>
    <string name="youhavenotenoughdiamonds">You have not enough diamonds to add this person! We have some free or paid diamonds for you :)</string>
    <string name="ok">OK</string>
    <string name="wewilluploadwheninternentiaavailable">We will try to upload your image when there is internet available.</string>
    <string name="thatsuptous">sorry, that\'s up to us!</string>
    <string name="unlockthisperson">Unlock this person?</string>
    <string name="itcosts20diamonds">It costs 20 Diamonds to unlock</string>
    <string name="unlockedperson">Unlocked person!</string>
    <string name="youmustbeatleast13">You must be at least 13 years old</string>
    <string name="female">FEMALE</string>
    <string name="male">MALE</string>
    <string name="bisexual">BISEXUAL</string>
    <string name="Error">error</string>
    <string name="Upload">upload</string>
    <string name="someonelikesyou">Someone likes you!</string>
    <string name="someoneaddedyouonsnapchat">Someone added you on snapchat!</string>
    <string name="yourcreditshavearrived">Your Diamonds have arrived!</string>
    <string name="yay">yay!</string>
    <string name="showsomelove">show some love :)</string>
    <string name="guesswhosrichnow">Guess who\'s rich now?</string>
    <string name="free_diamonds">Free Diamonds</string>
    <string name="follow_us_on_instagram_50_diamonds">Follow us on instagram: 50 Diamonds</string>
    <string name="follow">Follow</string>
    <string name="show">Show</string>
    <string name="buy">Buy</string>
    <string name="buydiamonds">Buy Diamonds</string>
    <string name="_100_diamonds_1">100   Diamonds: 1 $</string>
    <string name="_1000_diamonds_8_99">1000 Diamonds: 8.99 $</string>
    <string name="_5000_diamonds_38_99">5000 Diamonds: 38.99 $</string>
    <string name="this_is_a_diamond">This is a diamond :)</string>
    <string name="your_diamonds">Your Diamonds</string>
</resources>
