<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_your_suggestions"
            android:title="@string/yoursuggestions" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_whatshot_black"
            android:title="@string/newandhot" />
    </group>

    <group android:checkableBehavior="none"
        android:id="@+id/your_profile_group_drawer"
        >
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_person_black"
            android:title="@string/yourprofile" />
    </group>


    <group android:checkableBehavior="none"
        android:id="@+id/diamonds_group_drawer"
        >
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_diamond"
            android:title="@string/your_diamonds" />
    </group>


</menu>
