<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.frozensparks.hellofriend.likesAndDiamonds.DiamondFragment">


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:clipToPadding="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:clipToPadding="false"
                    android:gravity="center"
                    android:orientation="vertical"

                    >

                    <ImageView
                        android:id="@+id/big_dia_logo_dias"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="30dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/this_is_a_diamond"
                        android:cropToPadding="false"
                        android:src="@drawable/ic_diamond_coin" />

                    <TextView
                        android:id="@+id/creditamount_diamondfragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="00000"
                        android:textSize="40sp" />

                    <LinearLayout
                        android:id="@+id/free_dias_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:clipToPadding="false"
                        android:elevation="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="5dp"
                            android:layout_marginStart="5dp"
                            android:text="@string/free_diamonds" />

                        <LinearLayout
                            android:id="@+id/ig_follow_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:background="@android:color/white"

                            android:elevation="2dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView9"
                                android:layout_width="200dp"
                                android:layout_height="match_parent"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1"
                                android:gravity="start"
                                android:text="@string/follow_us_on_instagram_50_diamonds"
                                android:textSize="21sp" />

                            <Button
                                android:id="@+id/follow_us_on_instagram_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@color/colorPrimaryLight"
                                android:text="@string/follow" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="5dp"
                            android:background="@android:color/white"
                            android:elevation="2dp"

                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView7"
                                android:layout_width="200dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="start"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1"
                                android:scaleType="fitCenter"
                                android:src="@mipmap/ss_logo" />

                            <Button
                                android:id="@+id/offerwall_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@color/colorPrimaryLight"
                                android:text="@string/show" />

                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/paid_dias_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:clipToPadding="false"
                        android:elevation="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="5dp"
                            android:layout_marginStart="5dp"
                            android:text="@string/buydiamonds" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_marginBottom="5dp"
                            android:layout_weight="1"
                            android:background="@android:color/white"
                            android:elevation="2dp"

                            android:orientation="horizontal"
                            tools:ignore="NestedWeights">

                            <TextView
                                android:id="@+id/textView13"
                                android:layout_width="200dp"
                                android:layout_height="match_parent"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1"
                                android:gravity="start"
                                android:text="@string/_100_diamonds_1"
                                android:textSize="21sp" />

                            <Button
                                android:id="@+id/buy100"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@color/colorPrimaryLight"
                                android:text="@string/buy" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="5dp"
                            android:background="@android:color/white"
                            android:elevation="2dp"

                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView11"
                                android:layout_width="200dp"
                                android:layout_height="match_parent"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1"
                                android:gravity="start"
                                android:text="@string/_1000_diamonds_8_99"
                                android:textSize="21sp" />

                            <Button
                                android:id="@+id/buy1000"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@color/colorPrimaryLight"
                                android:text="@string/buy" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="5dp"
                            android:background="@android:color/white"
                            android:elevation="2dp"

                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView12"
                                android:layout_width="200dp"
                                android:layout_height="match_parent"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1"
                                android:gravity="start"
                                android:text="@string/_5000_diamonds_38_99"
                                android:textSize="21sp" />

                            <Button
                                android:id="@+id/buy5000"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@color/colorPrimaryLight"
                                android:text="@string/buy" />

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </android.support.v4.widget.NestedScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>


</FrameLayout>
